# advent-of-code-2022

./: .clang-format  CMakeLists.txt
1/: CMakeLists.txt  main.cpp
2/: main.cpp
2022/1/: CMakeLists.txt  main.cpp
2022/2/: CMakeLists.txt  main.cpp
2022/3/: CMakeLists.txt
2022/4/: CMakeLists.txt
2022/5/: main.cpp
2022/6/: main.cpp
2022/7/: main.cpp
2022/8/: CMakeLists.txt
2022/9/: CMakeLists.txt  main.cpp
2023/1/: config-tweaks.hpp  main.cpp  sample3.txt
2023/2/: CMakeLists.txt  config-tweaks.hpp  main.cpp
2023/config/: config.hpp
3/: CMakeLists.txt  main.cpp
4/: CMakeLists.txt  main.cpp
5/: main.cpp
6/: main.cpp
7/: main.cpp
8/: CMakeLists.txt  config-tweaks.hpp  main.cpp
config/: config.hpp
template/: CMakeLists.txt  main.cpp
utils/: CMakeLists.txt  ScopeTime.hpp  TimeMeasure.cpp  misc.hpp
